# shadowcoder

./: .gitignore  CLAUDE.md  README.md  README_CN.md  pyproject.toml
data/roles/acceptance_writer/: instructions.md  soul.md
data/roles/code_reviewer/: instructions.md  soul.md
data/roles/design_reviewer/: instructions.md  soul.md
data/roles/designer/: instructions.md  soul.md
data/roles/developer/: instructions.md  soul.md
data/roles/escalation_reviewer/: instructions.md  soul.md
data/roles/preflight/: instructions.md  soul.md
docs/: ARCHITECTURE.md  design-acceptance-script.md  issues-and-improvements.md  optimization-plan.md
examples/01-gomoku-ai/: README.md  requirements.md
examples/02-neural-net-tuning/: README.md  data.py  pyproject.toml  requirements.md  train.py
requirements/: add-codex-agent.md
scripts/: migrate_issues.py  run_real.py
src/shadowcoder/: __init__.py  __main__.py
tests/: conftest.py  test_dump_agent_context.py  test_e2e.py  test_e2e_real_task.py  test_e2e_sql_engine.py  test_integration.py
tests/agents/: test_base.py  test_claude_code.py  test_codex.py  test_registry.py  test_types.py
tests/core/: test_acceptance_validation.py  test_bus.py  test_config.py  test_create_with_description.py  test_engine.py  test_engine_test_retry.py  test_feedback.py  test_issue_store.py  test_language.py  test_metric_gate.py  test_models.py  test_task_manager.py  test_version_archive.py  test_worktree.py  test_worktree_checkpoint.py
tests/dashboard/: test_integration.py  test_parsers.py  test_server.py  test_state.py  test_watcher.py
(+72 files in other folders)
